--- a/ProjetPi-web/src/main/webapp/resources/AjoutCandidat.xhtml
+++ b/ProjetPi-web/src/main/webapp/resources/AjoutCandidat.xhtml
@@ -57,6 +57,8 @@
 					<h:outputText value="email" />
 					<h:inputText value="#{candidateBean.email}" />
 					<h:outputText value="profession" />
+					<h:outputText value="phonenumber" />
+					<h:inputText value="#{candidateBean.phoneNumber}" />
 					<h:inputText value="#{candidateBean.profession}" />
 					<h:outputText value="username" />
 					<h:inputText value="#{candidateBean.username}" />
